# Extractor

./: .gitignore    CONTRIBUTING.md  Cargo.toml  README.md  README.md  
.github/workflows/: ci.yml
benches/: performance_benchmarks.rs
config/: default.toml
docs/: API_GUIDE.md  COOKBOOK.md  PERFORMANCE.md
examples/: basic_usage.rs  create_index.rs  indexed_mode.rs
src/: config.rs  core.rs  error.rs  filters.rs  index.rs  lib.rs  main.rs  types.rs  utils.rs
src/extractors/: gene.rs  mod.rs  sga.rs
src/formats/: fasta.rs  mod.rs
src/tools/: converter.rs  schemas.rs  stats.rs  validator.rs
tests/: integration_tests.rs
